--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "vscode-plugin-donut",
   "description": "来自牛马摸鱼的产物",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DonutGeek/vscode-plugin-donut.git"
+  },
   "engines": {
     "vscode": "^1.100.0"
   },
@@ -14,10 +18,22 @@
   "contributes": {
     "commands": [
       {
+        "command": "vscode-plugin-donut.copyName",
+        "title": "复制名称"
+      },
+      {
         "command": "vscode-plugin-donut.helloWorld",
         "title": "Hello World"
       }
-    ]
+    ],
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "vscode-plugin-donut.copyName",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
