refactor: 移除未使用的helloWorld命令并更新package.json
移除extension.ts中的helloWorld命令，因为它未被使用。同时，更新package.json以添加关键词、发布者信息，并移除与helloWorld命令相关的配置。这些更改旨在简化代码并增强插件的元数据。

--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "vscode-plugin-donut",
   "displayName": "vscode-plugin-donut",
   "description": "来自牛马摸鱼的产物",
+  "keywords": [
+    "vscode-plugin-donut",
+    "donut",
+    "vscode-plugin",
+    "牛马",
+    "张志豪"
+  ],
   "version": "0.0.1",
+  "publisher": "donut",
   "repository": {
     "type": "git",
     "url": "https://github.com/DonutGeek/vscode-plugin-donut.git"
@@ -20,10 +28,6 @@
       {
         "command": "vscode-plugin-donut.copyName",
         "title": "复制名称"
-      },
-      {
-        "command": "vscode-plugin-donut.helloWorld",
-        "title": "Hello World"
       }
     ],
     "menus": {
@@ -37,6 +41,8 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
+    "vscode:publish": "vsce publish",
+    "vscode:package": "vsce package",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
