chore: 更新package.json并添加logo.png
添加了public/logo.png作为项目图标，更新了package.json中的版本号、关键字列表，并添加了发布脚本

--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "vscode-plugin-donut",
   "displayName": "vscode-plugin-donut",
   "description": "来自牛马摸鱼的产物",
+  "icon": "public/logo.png",
   "keywords": [
     "vscode-plugin-donut",
     "donut",
-    "vscode-plugin",
     "牛马",
-    "张志豪"
+    "张志豪",
+    "郭明亮",
+    "copy"
   ],
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "donut",
   "repository": {
     "type": "git",
@@ -40,6 +42,7 @@
     }
   },
   "scripts": {
+    "release": "npm version patch && vsce publish",
     "vscode:prepublish": "pnpm run package",
     "vscode:publish": "vsce publish",
     "vscode:package": "vsce package",
